# urxvt-ext-notify-osc

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  notify-osc
.github/workflows/: ci.yml
debian/: README.Debian  changelog  control  copyright  rules  urxvt-ext-notify-osc.install  watch
